Bug 1688686 - Don't assert on OOM/throttle in ClientWebGLContext::BackBufferSnapshot. r=gfx-reviewers,aosmond

It's more common to hit the 500MB limit for e.g. 13k x 13k requests than
OOM, but we can treat them the same.

Differential Revision: https://phabricator.services.mozilla.com/D134720