dom/canvas/ClientWebGLContext.cpp
@@ -1014,8 +1014,18 @@ RefPtr<gfx::DataSourceSurface> ClientWebGLContext::BackBufferSnapshot() {
   RefPtr<gfx::DataSourceSurface> surf =
       gfx::Factory::CreateDataSourceSurfaceWithStride(
           {size.x, size.y}, surfFormat, stride, /*zero=*/true);
-  MOZ_ASSERT(surf);
-  if (NS_WARN_IF(!surf)) return nullptr;
+  if (NS_WARN_IF(!surf)) {
+    // Was this an OOM or alloc-limit? (500MB is our default resource size
+    // limit)
+    surf = gfx::Factory::CreateDataSourceSurfaceWithStride({1, 1}, surfFormat,
+                                                           4, /*zero=*/true);
+    if (!surf) {
+      // Still failed for a 1x1 size.
+      gfxCriticalError() << "CreateDataSourceSurfaceWithStride(surfFormat="
+                         << surfFormat << ") failed.";
+    }
+    return nullptr;
+  }
 
   {
     const gfx::DataSourceSurface::ScopedMap map(
